<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailsActivity">

    <LinearLayout
        android:background="@color/backGround"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_detail_main"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_icn_nav_marvel" />

        <TextView
            android:textColor="@color/colorAccent"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/name" />

        <TextView
            android:textColor="#ffffff"
            android:id="@+id/txt_detail_name"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/name" />

        <TextView

            android:textColor="@color/colorAccent"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/description" />

        <TextView

            android:textColor="#ffffff"
            android:id="@+id/txt_detail_Detail"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/description" />

        <TextView

            android:textColor="@color/colorAccent"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/comics" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_detail_comics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <TextView

            android:textColor="@color/colorAccent"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/series" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_detail_series"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <TextView

            android:textColor="@color/colorAccent"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/stories" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_detail_stories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <TextView

            android:textColor="@color/colorAccent"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/event" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_detail_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <TextView

            android:textColor="@color/colorAccent"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/related_link" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <TextView

                android:textColor="#ffffff"

                android:id="@+id/txt_detail_detail_extra"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/detail" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:src="@drawable/ic_icn_cell_disclosure" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <TextView


                android:textColor="#ffffff"
                android:id="@+id/txt_detail_wiki"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/wiki" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:src="@drawable/ic_icn_cell_disclosure" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="16dp"

            android:orientation="horizontal">


            <TextView

                android:textColor="#ffffff"
                android:id="@+id/txt_detail_comiclink"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"

                android:text="@string/comiclink" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:src="@drawable/ic_icn_cell_disclosure" />
        </LinearLayout>


    </LinearLayout>


</androidx.core.widget.NestedScrollView>